GNOME Bugzilla – Bug 786485
Image upload broken on vulkan
Last modified: 2017-08-18 23:42:06 UTC
Created attachment 357923 [details] [review] gsk: vulkan: fix image uploading Fixes this issue with master and the vulkan renderer : http://imgur.com/a/AIbmX
thanks for the patch!!
Created attachment 357930 [details] [review] gsk: vulkan: fix image uploading Apply offset in both cases.
Attachment 357930 [details] pushed as 48df192 - gsk: vulkan: fix image uploading